...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G93-fP-UaR">
                                <rect key="frame" x="165" y="296" width="44" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="hjH-0q-K0r"/>
                                    <constraint firstAttribute="height" constant="44" id="kdS-qW-OWt"/>
                                </constraints>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveButton:" destination="gmy-sM-dCm" eventType="touchUpInside" id="AsC-Mk-E0P"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zh5-ZB-2px">
                                <rect key="frame" x="16" y="617" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="ExO-CB-82t"/>
                                </constraints>
                                <state key="normal" title="Add New Car In Catalog"/>
                                <connections>
                                    <action selector="addNewCarButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hDW-vI-Omz"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="59" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3qq-Rp-xOD">
                                <rect key="frame" x="-8" y="117" width="391" height="498"/>
...
