...
@end

@implementation AddNewCarViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    self.title = @"Add New Car";
}

- (IBAction)saveButton:(id)sender {
    
    Car* tempCar = [[Car alloc] init];
    
...
