...
    
    self.db = [FMDatabase databaseWithPath:[[self databasePath] absoluteString]];
    [_db open];
    

    
    self.title = @"Main Menu";
    
    //self.tableData = @[@"BMW x5", @"BMW x6", @"BMW x5m"];
    
    // Отправить запрос в Квикблокс, чтобы получить все объекты типа Car
    [QBRequest objectsWithClassName:@"Car" successBlock:^(QBResponse * _Nonnull response, NSArray * _Nullable objects) {
        
...
